--- a/landpage/destination.html
+++ b/landpage/destination.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destination</title>
-    <link rel="icon" type="image/png" href="img/logo.png">
+    <link type="text/css" rel="stylesheet" href="mystyle.css">
 </head>
+<body class="destination">
     <nav>
         <img src="img/logo.png" alt="" width="12%">
-        <table bgcolor="#F08080" border="0" cellspacing="0" cellpadding="8" width="1336px"><tr>
+        <table bgcolor="#F08080" border="2" cellspacing="0" cellpadding="8" width="1330px"><tr></tr>
             <ul>
                 <th><li><a href="home.html">Home</a></li></th>
                 <th><li><a href="profile.html">Profile</a></li></th>
@@ -16,13 +17,12 @@
                 <th><li><a href="package.html">Package</a></li></th>
                 <th><li><a href="promotion.html">Promotion</a></li></th>
                 <th><li><a href="contact.html">Contact</a></li></th>
-            </ul></tr></table>
+            </ul></tr></table><br><br>
     </nav>
-    <body background="img/destinasiii.jpg" align="center">
-        <h2>Tujuan Wisata & Harga (Hotel + Pesawat)</h2> <br>
-        <table align="center" border="3" cellspacing="0" cellpadding="8">
+        <h2>Tujuan Wisata & Harga (Hotel + Pesawat)</h2><br>
+        <table align="center" border="4" cellspacing="0" cellpadding="8">
             <thead>
-               <th>Tujuan</th>
+                <th>Tujuan</th>
                 <th>Waktu</th>
                 <th>Tempat</th>
                 <th>Harga</th>
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 <td>Labuan Bajo</td>
-                <td>4 Hari 3 Malam</td>>
+                <td>4 Hari 3 Malam</td>
                 <td>Laprima Hotel Labuan Bajo</td>
                 <td>Rp. 3.520.000 /Orang</td>
             </tr>
@@ -62,7 +62,7 @@
                 <td>DKI Jakarta</td>
                 <td>2 Hari 1 Malam</td>
                 <td>Crowne Plaza Jakarta Residences</td>
-                <td>Rp. 1.285 /Orang</td>
+                <td>Rp. 1.285.000 /Orang</td>
             </tr> 
             <tr>
                 <td>Malang</td>
