--- a/landpage/home.html
+++ b/landpage/home.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-
-    <link rel="icon" type="image/png" href="img/logo.png">
+    <link type="text/css" rel="stylesheet" href="mystyle.css">
 </head>
-<body background="img/homes.jpg" >
+<body class="homes">
     <nav>
-            <img src="img/logo.png" alt="" width="12%">
-            <table bgcolor="#F08080" border="0" cellspacing="0" cellpadding="8" width="1336px"><tr>
-				<ul>
-					<th><li><a href="home.html">Home</a></li></th>
-					<th><li><a href="profile.html">Profile</a></li></th>
-					<th><li><a href="destination.html">Destination</a></li></th>
-                    <th><li><a href="package.html">Package</a></li></th>
-                    <th><li><a href="promotion.html">Promotion</a></li></th>
-                    <th><li><a href="contact.html">Contact</a></li></th>
-				</ul></tr></table>
+        <img src="img/logo.png" alt="" width="12%">
+        <table bgcolor="#F08080" border="2" cellspacing="0" cellpadding="8" width="1330px"><tr></tr>
+			<ul>
+				<th><li><a href="home.html">Home</a></li></th>
+				<th><li><a href="profile.html">Profile</a></li></th>
+				<th><li><a href="destination.html">Destination</a></li></th>
+                <th><li><a href="package.html">Package</a></li></th>
+                <th><li><a href="promotion.html">Promotion</a></li></th>
+                <th><li><a href="contact.html">Contact</a></li></th>
+			</ul></tr></table>
     </nav>
     <main>
-    <h1>Mau Liburan Kemana Kamu Saat Ini?</h1>	
+    <h1>Butuh liburan? Ayo segera Booking paket liburanmu disini !!!</h1>	
                <h3> Liburan Terpopuler</h3>
                 <select class="dropdown">
                     <option value="Bali">Bali</option>
@@ -35,48 +34,7 @@
                     <option value="Bali">Banda Aceh</option></select>
                 <br>
             <h3>Pemesanan Paket Perjalanan Disini!</h3>
-           <form action="">
-               <fieldset aria-setsize="48%">
-                   <legend align="center"> Pemesanan Paket Perjalanan Disini!</legend>
-                   <label for="">Nama Lengkap</label>
-                    <input type="text" id="" ><br><br>
-                    <label for="">No. Telepon</label>
-                    <input type="number" id="" ><br><br>
-                    <label for="">Alamat Email</label>
-                    <input type="email" id="" ><br><br>
-                    <label for="">Alamat Rumah</label>
-                    <input type="textarea" id="" ><br><br>
-                    <label for="">Jenis Kelamin</label>
-                    <p><input type='radio' name='jenis_kelamin' value='pria' />Pria</p>
-                    <p><input type='radio' name='jenis_kelamin' value='perempuan' />Wanita</p>
-                    <label for="">Hobby</label>
-                    <select name="" id="" >
-                        <option value="">Hobby</option>
-                        <option value="">Berselancar</option>
-                        <option value="">Berenang</option>
-                        <option value="">Bersepeda</option>
-                        <option value="">Melukis</option>
-                        <option value="">Mendaki</option>
-                        <option value="">Memasak</option>
-                        <option value="">Menyelam</option>
-                        <option value="">Memanah</option>
-                    </select> <br> <br>
-                    <label for="destination">Tujuan Keberangkatan</label>
-                    <select name="" id="destination" class="form-control">
-                         <option value="Bali">Bali</option>
-                         <option value="Bali">Labuan Bajo</option>
-                         <option value="Bali">Lombok</option>
-                         <option value="Bali">Raja Ampat</option>
-                         <option value="Bali">Yogyakarta</option>
-                         <option value="Bali">DKI Jakarta</option>
-                         <option value="Bali">Malang</option>
-                         <option value="Bali">Lampung</option>
-                         <option value="Bali">Banda Aceh</option></select>
-                    </select>
-                    <input type="submit" class="btn btn-primary btn-block" value="Submit"> 
-                    <input type="reset">
-               </fieldset>
-           </form><br>
+           
     </main>
     <table cellpadding="5" width="1336px">
         <tr ><td align="center">
@@ -88,7 +46,7 @@
             <td></td>
         </tr>
         </table>
-        <table border="4" cellpadding="8" >
+        <table border="4" cellpadding="6" class="tb1">
             <tr><h3 align="center">Tujuan Terpopuler</h3>
                 <td align="center"><h2>Bali</h2></td>
                 <td align="center"><img src="img/purabedugulbali.jpg" alt="" width="40%"> 
