--- a/landpage/profile.html
+++ b/landpage/profile.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="icon" type="image/png" href="img/logo.png">
+    <link type="text/css" rel="stylesheet" href="mystyle.css">
 </head>
-<body background="img/profile.jpg">
-    
+<body class="profile">
     <h1>RABBANI TRAVEL</h1>
     <nav>
-        <table bgcolor="#F08080" border="0" cellspacing="0" cellpadding="8" width="1336px"><tr>
+        <img src="img/logo.png" alt="" width="12%">
+        <table bgcolor="#F08080" border="2" cellspacing="0" cellpadding="8" width="1330px"><tr></tr>
             <ul>
                 <th><li><a href="home.html">Home</a></li></th>
                 <th><li><a href="profile.html">Profile</a></li></th>
                 <th><li><a href="destination.html">Destination</a></li></th>
                 <th><li><a href="package.html">Package</a></li></th>
                 <th><li><a href="promotion.html">Promotion</a></li></th>
-                <th><li><a href="contact.html">contact</a></li></th>
+                <th><li><a href="contact.html">Contact</a></li></th>
             </ul></tr></table>
     </nav>
     <table cellpadding="5" width="1336px">
         <tr ><td align="center">
-            <img src="img/logo.png" alt="" width="12%">
         </td></tr></table>
         <br>
         <br>
-         <p>Rabbani Travel merupakan sebuah perusahaan yang bergerak dibidang travel dan menawarkan berbagai
+        <br>
+        <p>Rabbani Travel merupakan sebuah perusahaan yang bergerak dibidang travel dan menawarkan berbagai
              pilihan perjalanan yang mengasyikan.<p></p> Harga yang ditawarkan pun relative lebih murah, jika 
              dibandingkan dengan agen travel yang lainnya dan fitur pelayanan yang begitu berkualitas.<p></p>
              Rabbani Travel sangat mengutamakan kebersihan dan kenyamanan traveller, karena tanpa rasa nyaman 
