--- a/landpage/promotion.html
+++ b/landpage/promotion.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promotion</title>
-    <link rel="icon" type="image/png" href="img/logo.png">
+    <link type="text/css" rel="stylesheet" href="mystyle.css">
 </head>
-<body background="img/promotionn.jpg">
+<body class="promotion">
     <nav>
-        <table cellpadding="5" width="1336px">
-        <tr ><td align="center">
-            <img src="img/logo.png" alt="" width="12%">
-        </td></tr></table>
-        <table bgcolor="#F08080" border="0" cellspacing="0" cellpadding="8" width="1336px"><tr>
+        <img src="img/logo.png" alt="" width="12%">
+        <table bgcolor="#F08080" border="2" cellspacing="0" cellpadding="8" width="1330px"><tr></tr>
             <ul>
                 <th><li><a href="home.html">Home</a></li></th>
                 <th><li><a href="profile.html">Profile</a></li></th>
@@ -22,7 +19,8 @@
                 <th><li><a href="contact.html">Contact</a></li></th>
             </ul></tr></table>
     </nav>
-    <table border="1" cellpadding="3" >
+    <table border="1" cellpadding="3" class="tb2">
+        <fieldset aria-setsize="50%"></fieldset>
         <tr><h3 align="center">Promo Bulan ini</h3>
             <td align="center" ><h2>Denpasar Bali</h2></td>
             <td align="center"><img src="img/menjangan.jpg" width="60%"> 
@@ -33,8 +31,8 @@
                 Yang hobinya snorkeling, divinng, swafoto bisa banget mengunjungi pulau nan indah ini ini.</p><p>
                 Pulau ini sangat khas budayanya dan begitu terkenalturis lokal maupun internasional</p>
                 <h4>Mulai dari</h4><h3><s>2Juta-an</s></h3>
-                <h2>1,8uta-an</h2>
-                <button>BOOKING DISINI!</button>
+                <h2>1,8juta-an</h2>
+                <input type="BOOKING DISINI" class="btn4" value="BOOKING DISINI">
             </td>
         </tr>
         <tr><h3 align="center"></h3>
@@ -48,7 +46,7 @@
                 terbaik untuk sosial media</p>
                 <h4>Mulai dari</h4><h3><s>6Juta-an</s></h3>
                 <h2>5Juta-an</h2>
-                <button>BOOKING DISINI!</button>
+                <input type="BOOKING DISINI" class="btn4" value="BOOKING DISINI">
             </td>
         </td>
         <tr><h3 align="center"></h3>
@@ -61,8 +59,7 @@
                 di Kawasan ini begitu jelas terlihat dan pastinya tidak membosankan</p>
                 <h4>Mulai dari</h4><h3><s>5Juta-an</s></h3>
                 <h2>4Juta-an</h2>
-                <button>BOOKING DISINI!</button>
-                <!-- *sumber= <a href="https://sentosawisata.com/paket-tour-raja-ampat/">https://sentosawisata.com/paket-tour-raja-ampat/</a> -->
+                <input type="BOOKING DISINI" class="btn4" value="BOOKING DISINI">
             </td>
             </td>
         </tr>
@@ -76,7 +73,7 @@
                 maka kami menyediakan paket selama 4hari 3 malam
                 <h4>Mulai dari</h4><h3><s>3jta-an</s></h3>
                 <h2>1,8Juta-an</h2>
-                <button>BOOKING DISINI!</button>
+                <input type="BOOKING DISINI" class="btn4" value="BOOKING DISINI">
             </td>
             </td>
         </tr>
@@ -90,7 +87,8 @@
                 yang wajib kamu kunjungi karena diseluruh turis lokal maupun internasional<img src="img/sale1.png" alt=""></p>
                 <h4>Mulai dari</h4><h3><s>2Juta-an</s></h3>
                 <h2>1,5Juta-an</h2>
-                <button>BOOKING DISINI!</button>
+                <input type="BOOKING DISINI" class="btn4" value="BOOKING DISINI">
+            </fieldset>
             </td>
             </td>
         </body>
